apps/longhorn-system-conf/longhorn-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  parentRefs:
  - name: auth-gateway
    namespace: default
    sectionName: http
  hostnames:
  - "longhorn.mgmt.sholdee.net"
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-https
  namespace: longhorn-system
spec:
  parentRefs:
  - name: auth-gateway
    namespace: default
    sectionName: https
  hostnames:
  - "longhorn.mgmt.sholdee.net"
  rules:
  - backendRefs:
    - name: longhorn-frontend
      namespace: longhorn-system
      port: 80
